cmake_minimum_required(VERSION 3.3)
project(course_cs143_compilers)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    assignments/PA2/cool-lex.cc
    assignments/PA2/handle_flags.cc
    assignments/PA2/lextest.cc
    assignments/PA2/stringtab.cc
    assignments/PA2/utilities.cc
    assignments/PA3/cool-tree.cc
    assignments/PA3/cool-tree.handcode.h
    assignments/PA3/cool.tab.h
    assignments/PA3/dumptype.cc
    assignments/PA3/handle_flags.cc
    assignments/PA3/parser-phase.cc
    assignments/PA3/stringtab.cc
    assignments/PA3/tokens-lex.cc
    assignments/PA3/tree.cc
    assignments/PA3/utilities.cc
    assignments/PA4/ast-lex.cc
    assignments/PA4/ast-parse.cc
    assignments/PA4/cool-tree.cc
    assignments/PA4/cool-tree.h
    assignments/PA4/cool-tree.handcode.h
    assignments/PA4/dumptype.cc
    assignments/PA4/handle_flags.cc
    assignments/PA4/semant-phase.cc
    assignments/PA4/semant.cc
    assignments/PA4/semant.h
    assignments/PA4/stringtab.cc
    assignments/PA4/symtab_example.cc
    assignments/PA4/tree.cc
    assignments/PA4/utilities.cc
    include/PA2/cgen_gc.h
    include/PA2/cool-io.h
    include/PA2/cool-parse.h
    include/PA2/cool.h
    include/PA2/copyright.h
    include/PA2/list.h
    include/PA2/stringtab.h
    include/PA2/stringtab_functions.h
    include/PA2/tree.h
    include/PA2/utilities.h
    include/PA3/cgen_gc.h
    include/PA3/cool-io.h
    include/PA3/cool-parse.h
    include/PA3/cool-tree.h
    include/PA3/cool.h
    include/PA3/copyright.h
    include/PA3/list.h
    include/PA3/stringtab.h
    include/PA3/stringtab_functions.h
    include/PA3/tree.h
    include/PA3/utilities.h
    include/PA4/ast-parse.h
    include/PA4/cgen_gc.h
    include/PA4/cool-io.h
    include/PA4/cool-parse.h
    include/PA4/cool.h
    include/PA4/copyright.h
    include/PA4/list.h
    include/PA4/stringtab.h
    include/PA4/stringtab_functions.h
    include/PA4/symtab.h
    include/PA4/tree.h
    include/PA4/utilities.h
    include/PA5/ast-parse.h
    include/PA5/cgen_gc.h
    include/PA5/cool-io.h
    include/PA5/cool-parse.h
    include/PA5/cool-tree.h
    include/PA5/cool.h
    include/PA5/copyright.h
    include/PA5/list.h
    include/PA5/stringtab.h
    include/PA5/stringtab_functions.h
    include/PA5/symtab.h
    include/PA5/tree.h
    include/PA5/utilities.h
    src/PA2/handle_flags.cc
    src/PA2/lextest.cc
    src/PA2/stringtab.cc
    src/PA2/utilities.cc
    src/PA3/cool-tree.cc
    src/PA3/dumptype.cc
    src/PA3/handle_flags.cc
    src/PA3/parser-phase.cc
    src/PA3/stringtab.cc
    src/PA3/tokens-lex.cc
    src/PA3/tree.cc
    src/PA3/utilities.cc
    src/PA4/ast-lex.cc
    src/PA4/ast-parse.cc
    src/PA4/cool-tree.cc
    src/PA4/dumptype.cc
    src/PA4/handle_flags.cc
    src/PA4/semant-phase.cc
    src/PA4/stringtab.cc
    src/PA4/symtab_example.cc
    src/PA4/tree.cc
    src/PA4/utilities.cc
    src/PA5/ast-lex.cc
    src/PA5/ast-parse.cc
    src/PA5/cgen-phase.cc
    src/PA5/cool-tree.cc
    src/PA5/dumptype.cc
    src/PA5/handle_flags.cc
    src/PA5/stringtab.cc
    src/PA5/tree.cc
    src/PA5/utilities.cc)

add_executable(course_cs143_compilers ${SOURCE_FILES})